# manga-downloader

./: .gitignore  README.md  build.cmd  download.py  pyproject.toml  requirements.txt  run.cmd  run.sh
src/manga_downloader/: __init__.py  __main__.py  config.py  cookies.py  driver.py  history.py  utils.py
src/manga_downloader/downloaders/: __init__.py  base.py  cloud_downloader.py  curl_downloader.py  fallback.py  selenium_downloader.py
src/manga_downloader/gui/: __init__.py  chapter_dialog.py  donation_dialog.py  main_window.py  styles.py  update_checker.py
src/manga_downloader/manga/: __init__.py  chapter_worker.py  parser.py
