[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "manga-downloader"
version = "1.0.0"
description = "Автоматический скачиватель манги с com-x.life"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "PyQt5>=5.15",
    "selenium>=4.0",
    "webdriver-manager>=4.0",
    "curl_cffi>=0.5",
    "cloudscraper>=1.2",
    "requests>=2.28",
]

[project.scripts]
manga-downloader = "manga_downloader.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
